entity_macros/tests/ui/derive/ent/unsupported-enum-with-named-fields.stderr
error: Unsupported shape `named`
 --> $DIR/unsupported-enum-with-named-fields.rs:4:1
  |
4 | enum TestEnt {
  | ^^^^
